<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView21"
        android:layout_width="354dp"
        android:layout_height="33dp"
        android:text="@string/profile_job"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="353dp"
        android:layout_height="187dp"
        android:text="@string/profile_about"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="354dp"
        android:layout_height="33dp"
        android:text="@string/profile_education"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="190dp"
        android:layout_height="149dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="383dp"
        android:layout_height="59dp"
        android:layout_marginTop="15dp"
        android:text="@string/profile_name"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="354dp"
        android:layout_height="33dp"
        android:text="@string/profile_address"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="354dp"
        android:layout_height="33dp"
        android:text="@string/profile_phone"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="354dp"
        android:layout_height="33dp"
        android:text="@string/profile_email"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>