<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView14"
        android:layout_width="167dp"
        android:layout_height="32dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="75dp"
        android:text="@string/job_name2"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="151dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/job_name1"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="152dp"
        android:layout_height="28dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="110dp"
        android:text="@string/job_name3"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="409dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/searchbar_background"
        android:iconifiedByDefault="false"
        android:queryHint="Search Jobs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </SearchView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="119dp"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:src="@drawable/icon_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/icon_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="132dp"
        android:layout_height="126dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/icon_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="176dp"
        android:layout_height="87dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="4dp"
        android:text="@string/job_des1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="156dp"
        android:layout_height="64dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/job_des2"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="135dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/job_des3"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

</androidx.constraintlayout.widget.ConstraintLayout>